# temperature-monitor-app

./: .env.example  .gitignore  LICENSE  README.md  fix_linting.py  pyproject.toml  railway.toml  requirements.txt  run_quick_tests.py
.github/workflows/: ci-cd.yml
src/: app.py
src/pages/: 1_📊_Dashboard_Temperatura.py  2_📈_Histórico.py
src/utils/: database.py  helpers.py
tests/: test_export_csv.py
venv_temperature/: pyvenv.cfg
venv_temperature/Scripts/: activate  activate.bat
